Change artifact upload path in build workflow
Updated the upload artifact path from 'build' to 'deploy'.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,8 @@ jobs:
         with:
           name: QtHelloWorld-${{ runner.os }}-${{ matrix.buildArch }}-${{ matrix.qtVersion }}
 
-          path: build
+          path: deploy
+
 
 
 
