--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: QtHelloWorld-${{ runner.os }}-${{ matrix.buildArch }}-${{ matrix.qtVersion }}
+          name: elfExplorer-${{ runner.os }}-${{ matrix.buildArch }}-${{ matrix.qtVersion }}
 
-          path: deploy
+          path: build
+
 
 
 
